<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">EuroCalculadora</string>
    <string name="valorInvalido">¡Valor introducido inválido!</string>
    <string name="salir">Salir</string>
    <string name="m_euros2pesetas">Euros a pesetas</string>
	<string name="m_pesetas2euros">Pesetas a euros</string>
	<string name="punto">.</string>
	<string name="colorBlanco">textfield_search_empty_default.9</string>
	<string name="AdMob">a1506b438d060f7</string>
	
	<string name="n1">1</string>
	<string name="n2">2</string>
	<string name="n3">3</string>
	<string name="n4">4</string>
	<string name="n5">5</string>
	<string name="n6">6</string>
	<string name="n7">7</string>
	<string name="n8">8</string>
	<string name="n9">9</string>
	<string name="n0">0</string>
	<string name="C">C</string>
</resources>